QA Issue fixes for OMG size fit guide, form spacing on tablet, sticky nav quantity syncing

--- a/src/styles/sections/pdp-main.scss
+++ b/src/styles/sections/pdp-main.scss
@@ -74,7 +74,7 @@
     max-width: 376px;
     padding: 0;
     margin: auto;
-    margin-top: 0px;
+    margin-top: 14px;
   }
 
   @media (min-width: $screen-md){
